package.json modified

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://abolore1.github.io/meme-gerator/",
+  "homepage": "http://abolore1.github.io/meme-generator/",
   "name": "all-app",
   "version": "0.1.0",
   "private": true,
